@@ -7,7 +7,7 @@ AC_CANONICAL_SYSTEM
 
 GAMIN_MAJOR_VERSION=0
 GAMIN_MINOR_VERSION=0
-GAMIN_MICRO_VERSION=1
+GAMIN_MICRO_VERSION=2
 GAMIN_VERSION=$GAMIN_MAJOR_VERSION.$GAMIN_MINOR_VERSION.$GAMIN_MICRO_VERSION$GAMIN_MICRO_VERSION_SUFFIX
 GAMIN_VERSION_INFO=`expr $GAMIN_MAJOR_VERSION + $GAMIN_MINOR_VERSION`:$GAMIN_MICRO_VERSION:$GAMIN_MINOR_VERSION
 
@@ -16,6 +16,10 @@ AC_SUBST(GAMIN_MINOR_VERSION)
 AC_SUBST(GAMIN_MICRO_VERSION)
 AC_SUBST(GAMIN_VERSION)
 AC_SUBST(GAMIN_VERSION_INFO)
+
+FAM_VERSION_INFO="0:0:0"
+
+AC_SUBST(FAM_VERSION_INFO)
 
 VERSION=${GAMIN_VERSION}
 
@@ -34,9 +38,45 @@ dnl for the spec file
 RELDATE=`date +'%a %b %e %Y'`
 AC_SUBST(RELDATE)
 
+##################################################
+# Check for gtk-doc.
+##################################################
+
+AC_ARG_WITH(html-dir, [  --with-html-dir=PATH path to installed docs ])
+
+if test "x$with_html_dir" = "x" ; then
+  HTML_DIR='${datadir}/gtk-doc/html'
+else
+  HTML_DIR=$with_html_dir
+fi
+
+AC_SUBST(HTML_DIR)
+
+gtk_doc_min_version=1.0
+AC_MSG_CHECKING([gtk-doc version >= $gtk_doc_min_version])
+if pkg-config --atleast-version=$gtk_doc_min_version gtk-doc; then
+  AC_MSG_RESULT(yes)
+  GTKDOC=true
+else
+  AC_MSG_RESULT(no)
+  GTKDOC=false
+fi
+
+dnl Let people disable the gtk-doc stuff.
+AC_ARG_ENABLE(gtk-doc, [  --enable-gtk-doc  Use gtk-doc to build documentation [default=auto]], enable_gtk_doc="$enableval", enable_gtk_doc=auto)
+
+if test x$enable_gtk_doc = xauto ; then
+  if test x$GTKDOC = xtrue ; then
+    enable_gtk_doc=yes
+  else
+    enable_gtk_doc=no 
+  fi
+fi
+
+AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
+
 dnl
 dnl Start of pkg-config checks
-dnl removed dbus-glib-1
 dnl
 PKG_CHECK_MODULES(DAEMON, glib-2.0 gthread-2.0)
 AC_SUBST(DAEMON_CFLAGS)
@@ -241,6 +281,9 @@ tests/Makefile
 gamin.pc
 gamin.spec
 ])
+
+#docs/Makefile
+#docs/guide/Makefile
 
 echo "
 gamin-$VERSION:
